force-app/main/default/objects/Contract/fields/Contract_Costs__c.field-meta.xml
<CustomField>
    <fullName>Contract_Costs__c</fullName>
    <label>Contract Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>