force-app/main/default/objects/Contract/fields/Contract_Final_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Final_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Final Term</label>
    <type>Date</type>
</CustomField>