force-app/main/default/objects/Contract/fields/Contract_integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_integration_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Contract Integration ID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>