force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DL Agreement</fullName>
            </value>
            <value>
                <fullName>LA Agreement</fullName>
            </value>
            <value>
                <fullName>PC Agreement</fullName>
            </value>
            <value>
                <fullName>SC Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>