force-app/main/default/objects/Contract/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Key</label>
    <type>TextArea</type>
</CustomField>