force-app/main/default/objects/Contract/fields/Current_Contracted_company__c.field-meta.xml
<CustomField>
    <fullName>Current_Contracted_company__c</fullName>
    <label>Current Contracted company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Biomet,Z</fullName>
            </value>
            <value>
                <fullName>Exactech</fullName>
            </value>
            <value>
                <fullName>J&amp;J / Depuy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Smoth &amp; Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Synthes</fullName>
            </value>
            <value>
                <fullName>Synthes,A</fullName>
            </value>
            <value>
                <fullName>Tornier</fullName>
            </value>
            <value>
                <fullName>Wright</fullName>
            </value>
            <value>
                <fullName>Zimmer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>