force-app/main/default/objects/Contract/fields/Days_Left_for_expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_for_expiry__c</fullName>
    <formula>EndDate -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left for expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>