force-app/main/default/objects/Contract/fields/Probability_of_Successes__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Successes__c</fullName>
    <label>Probability of Successes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>