force-app/main/default/objects/Contract/fields/Sales_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Contract ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>