force-app/main/default/objects/Contract/recordTypes/AM_RC_CA_Contract_record_Type.recordType-meta.xml
<RecordType>
    <fullName>AM_RC_CA_Contract_record_Type</fullName>
    <active>true</active>
    <description>Canada Record type</description>
    <label>AM-RC-CA Contract record Type</label>
</RecordType>