force-app/main/default/objects/Contract/recordTypes/DN_CA_Contract_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>DN_CA_Contract_Record_Type</fullName>
    <active>true</active>
    <label>DN-CA-Contract Record Type</label>
</RecordType>