force-app/main/default/objects/Contract/recordTypes/DN_US_Contract_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>DN_US_Contract_Record_Type</fullName>
    <active>true</active>
    <label>DN-US-Contract Record Type</label>
</RecordType>