force-app/main/default/objects/Contract/recordTypes/EU_Contract_Layout.recordType-meta.xml
<RecordType>
    <fullName>EU_Contract_Layout</fullName>
    <active>true</active>
    <label>EU-Contract Layout</label>
</RecordType>