force-app/main/default/objects/Contract/recordTypes/NA_Contract_Layout.recordType-meta.xml
<RecordType>
    <fullName>NA_Contract_Layout</fullName>
    <active>true</active>
    <label>NA-Contract Layout</label>
</RecordType>