force-app/main/default/objects/Contract/listViews/DL_Agreements.listView-meta.xml
<ListView>
    <fullName>DL_Agreements</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>DL Agreement</value>
    </filters>
    <label>DL Agreements</label>
    <sharedTo>
        <roleAndSubordinatesInternal>AssociateDirectorCRM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>