force-app/main/default/objects/Contract/listViews/MyContracts.listView-meta.xml
<ListView>
    <fullName>MyContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.BILLING_COUNTRY</field>
        <operation>equals</operation>
        <value>Deutschland</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notContain</operation>
        <value>Pfeff,Buder,Hamb,Gass,Hiss,Wit</value>
    </filters>
    <label>My Contracts</label>
    <language>en_US</language>
</ListView>