force-app/main/default/objects/Contract/listViews/NL_contracten.listView-meta.xml
<ListView>
    <fullName>NL_contracten</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>External_Contract_ID__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>ContractType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.BILLING_COUNTRY</field>
        <operation>equals</operation>
        <value>Nederland,Curacao N.A.,Aruba,Suriname</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Published,Activated</value>
    </filters>
    <label>NL contracten</label>
    <language>nl_NL</language>
    <sharedTo>
        <group>EU_NL_All_Access</group>
        <group>EU_NL_All_Users</group>
    </sharedTo>
</ListView>