force-app/main/default/objects/Contract/listViews/PC_Agreements.listView-meta.xml
<ListView>
    <fullName>PC_Agreements</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>PC Agreement</value>
    </filters>
    <label>PC Agreements</label>
    <sharedTo>
        <roleAndSubordinatesInternal>AssociateDirectorCRM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>