force-app/main/default/objects/Contract/listViews/ZB_Connect_Vertraege.listView-meta.xml
<ListView>
    <fullName>ZB_Connect_Vertraege</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Next_Payment_Date__c</columns>
    <columns>ContractType__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.EU_Contract_Layout</value>
    </filters>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>ZB Connect</value>
    </filters>
    <filters>
        <field>CONTRACT.BILLING_COUNTRY</field>
        <operation>equals</operation>
        <value>Deutschland</value>
    </filters>
    <label>ZB Connect Verträge</label>
    <language>en_US</language>
    <sharedTo>
        <group>EU_DE_ZB_Connect</group>
    </sharedTo>
</ListView>